Fix radio alignment on Linux

--- a/skin/options/options-linux.css
+++ b/skin/options/options-linux.css
@@ -11,3 +11,8 @@
 {
 	display: -moz-box;
 }
+
+.pane-radio
+{
+	-moz-padding-start: calc(4.8em - 4px);
+}
